# rare_mediq_repo

./: .gitignore  LLM_MCTS_understanding.py  MCTS_search_guide.md  README.md  mediq_deepseek.sh  mediq_run_err.txt  mediq_run_out.txt  mediq_setup.sh  modification_log.md  pyproject.toml  rare_err.txt  rare_light_err.txt  rare_light_out.txt  rare_out.txt  rare_run_full.sh  rare_run_light.sh  rare_run_noRAG.sh  requirements.txt
MedRAG/: example_colbert.py  index_colbert.py  index_medcorp.py  merge_corpus.py  prepare_corpus.py  requirements.txt  test.py
MedRAG/corpus/pubmed/: .gitattributes  README.md
MedRAG/src/: medrag.py  utils.py
common/: arguments.py
data/MedQA/: test_all.json
eval_src/: Evaluator.py  do_eval.py
logs/: mediq_run_err_46017030.txt  mediq_run_out_46017030.txt
mediQ/: environment.yml
mediQ/src/: args.py  deepseek_inference_wrapper.py  expert.py  expert_basics.py  expert_functions.py  helper.py  keys.py  mediQ_benchmark.py  patient.py
models/: IO_System.py  Llama_API.py  OpenAI_API.py  vLLM_API.py
prompts/Ari_MedQA/: rephrasing_prompt_template.txt
prompts/Ari_MedQA/decompose/: decompose_prompt.txt  decompose_prompt_rephrased.txt
prompts/Ari_MedQA/fewshot_cot/: fewshot_cot_prompt.txt  fewshot_cot_prompt_parse_subq.txt  fewshot_cot_rag_config.json  fewshot_cot_rag_prompt.txt
prompts/Ari_MedQA/fewshot_ost/: fewshot_ost_prompt.txt
prompts/Ariginal/MedMCQA/: decompose_prompt.txt  decompose_prompt_rephrased.txt  fewshot_cot_prompt.txt  fewshot_cot_prompt_parse_subq.txt  fewshot_cot_prompt_rephrased.txt  fewshot_cot_rag_prompt.txt  rephrasing_prompt_template.txt
prompts/Ariginal/MedQA/: fewshot_cot_prompt_groundtruth.txt  fewshot_cot_prompt_rephrased.txt
prompts/ChatDoctor/decompose/: decompose_prompt.txt  decompose_query_prompt.txt
prompts/ChatDoctor/fewshot_cot/: fewshot_cot_config.json  fewshot_cot_prompt.txt  fewshot_cot_prompt_parse_subq.txt  fewshot_cot_rag_config.json  fewshot_cot_rag_prompt.txt  fewshot_self_reward_config.json  fewshot_self_reward_prompt.txt
prompts/ChatDoctor/fewshot_ost/: fewshot_ost_config.json  fewshot_ost_prompt.txt
prompts/CommonsenseQA/decompose/: decompose_prompt.txt  decompose_query_prompt.txt
prompts/CommonsenseQA/fewshot_cot/: fewshot_cot_prompt.txt
prompts/CommonsenseQA/fewshot_ost/: fewshot_ost_config.json  fewshot_ost_prompt.txt
prompts/MMLU/decompose/: decompose_prompt.txt  decompose_query_prompt.txt
prompts/MMLU/fewshot_cot/: fewshot_cot_config.json  fewshot_cot_prompt.txt  fewshot_cot_prompt_parse_subq.txt  fewshot_cot_rag_prompt.txt
prompts/MMLU/fewshot_ost/: fewshot_ost_config.json  fewshot_ost_prompt.txt
prompts/MedMCQA/decompose/: decompose_prompt.txt  decompose_query_prompt.txt
prompts/MedMCQA/fewshot_cot/: fewshot_cot_prompt.txt  fewshot_cot_prompt_parse_subq.txt  fewshot_cot_rag_prompt.txt  fewshot_self_reward_config.json  fewshot_self_reward_prompt.txt
prompts/MedMCQA/fewshot_ost/: fewshot_ost_prompt.txt
prompts/MedQA/decompose/: decompose_prompt.txt  decompose_query_prompt.txt  decompose_query_template.json
prompts/MedQA/fewshot_cot/: fewshot_cot_config.json  fewshot_cot_prompt.txt  fewshot_cot_prompt_parse_subq.txt  fewshot_cot_rag_config.json  fewshot_cot_rag_prompt.txt  fewshot_self_reward_prompt.txt
prompts/MedQA/fewshot_ost/: fewshot_ost_prompt.txt
prompts/PIQA/decompose/: decompose_prompt.txt  decompose_query_prompt.txt
prompts/PIQA/fewshot_cot/: fewshot_cot_prompt.txt  fewshot_cot_prompt_rephrased.txt  fewshot_self_reward_config.json  fewshot_self_reward_prompt.txt
prompts/PIQA/fewshot_ost/: fewshot_ost_prompt.txt
prompts/SIQA/decompose/: decompose_prompt.txt  (+1 more)
run_src/: MCTS_backbone_modified.py  MCTS_backbone_verbose.py  MCTS_for_reasoning.py  MCTS_for_reasoning_plus.py  colbert_server.py  data_preprocessing.py  do_rare.py  rare_light_runner.py  rstar_utils.py
run_src/eval/: run_eval.py
scripts/: run_generate_medqa_70b.sh  run_generate_medqa_8b.sh  run_generate_medqa_qwen0_6b.sh  run_generate_stg_8b.sh  run_mediq_deepseek.sh  run_mediq_deepseek_10.py
(+25 files in other folders)
