[project]
name = "rare-mediq"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    "absl-py",
    "accelerate",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "annotated-types",
    "anyio",
    "astor",
    "asttokens",
    "attrs",
    "bitarray",
    "bitsandbytes",
    "blake3",
    "blinker",
    "cachetools",
    "cbor2",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "cloudpickle",
    "colbert-ai",
    "colorama",
    "compressed-tensors",
    "cupy-cuda12x",
    "cut-cross-entropy",
    "datasets",
    "decorator",
    "depyf",
    "diffusers",
    "dill",
    "diskcache",
    "distro",
    "dnspython",
    "docstring-parser",
    "einops",
    "email-validator",
    "evaluate",
    "executing",
    "faiss-gpu",
    "fastapi",
    "fastapi-cli",
    "fastapi-cloud-cli",
    "fastrlock",
    "filelock",
    "flask",
    "frozendict",
    "frozenlist",
    "fsspec",
    "fuzzywuzzy",
    "gguf",
    "gitdb",
    "gitpython",
    "h11",
    "hf-transfer",
    "hf-xet",
    "httpcore",
    "httptools",
    "httpx",
    "huggingface-hub",
    "icalendar",
    "idna",
    "importlib-metadata",
    "interegular",
    "ipdb",
    "ipython",
    "ipython-pygments-lexers",
    "itsdangerous",
    "jedi",
    "jinja2",
    "jiter",
    "joblib",
    "jsonschema",
    "jsonschema-specifications",
    "lark",
    "levenshtein",
    "llguidance",
    "llvmlite",
    "lm-format-enforcer",
    "markdown-it-py",
    "markupsafe",
    "matplotlib-inline",
    "mdurl",
    "mistral-common",
    "mpmath",
    "msgpack",
    "msgspec",
    "multidict",
    "multiprocess",
    "networkx",
    "ninja",
    "nltk",
    "nmslib-metabrainz",
    "numba",
    "numpy",
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-cufile-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-cusparselt-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvtx-cu12",
    "openai",
    "openai-harmony",
    "opencv-python-headless",
    "outlines-core",
    "packaging",
    "pandas",
    "parso",
    "partial-json-parser",
    "peft",
    "pexpect",
    "pillow",
    "platformdirs",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "prompt-toolkit",
    "propcache",
    "protobuf",
    "psutil",
    "ptyprocess",
    "pure-eval",
    "py-cpuinfo",
    "pyarrow",
    "pybase64",
    "pybind11",
    "pycountry",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pydantic-extra-types",
    "pygments",
    "pyparsing",
    "python-dateutil",
    "python-dotenv",
    "python-json-logger",
    "python-levenshtein",
    "python-multipart",
    "pytz",
    "pyyaml",
    "pyzmq",
    "rapidfuzz",
    "ray",
    "referencing",
    "regex",
    "requests",
    "rich",
    "rich-toolkit",
    "rignore",
    "rouge-score",
    "rpds-py",
    "safetensors",
    "scipy",
    "sentencepiece",
    "sentry-sdk",
    "setproctitle",
    "shellingham",
    "shtab",
    "six",
    "smmap",
    "sniffio",
    "soundfile",
    "soxr",
    "stack-data",
    "starlette",
    "sympy",
    "thefuzz",
    "tiktoken",
    "tokenizers",
    "torch",
    "torchao",
    "torchaudio",
    "torchvision",
    "tqdm",
    "traitlets",
    "transformers",
    "triton",
    "trl",
    "typeguard",
    "typer",
    "typing-extensions",
    "typing-inspection",
    "tyro",
    "tzdata",
    "ujson",
    "unsloth",
    "unsloth-zoo",
    "urllib3",
    "uvicorn",
    "uvloop",
    "vllm",
    "wandb",
    "watchfiles",
    "wcwidth",
    "websockets",
    "werkzeug",
    "xformers",
    "xgrammar",
    "xxhash",
    "yarl",
    "zipp",
]

[tool.uv.sources]
colbert-ai = { git = "https://github.com/stanford-futuredata/ColBERT.git", rev = "501c29d9e0b7f7b393e36c4177ec2b141a253114" }
